# EvoC2D

./: .gitignore  CMakeLists.txt  EvoC2D.sln  EvoC2D.vcxproj  EvoC2D.vcxproj.filters  README.md  actualizer.c  actualizer.h  camera.c  camera.h  cmakelists.txt  collision.c  collision.h  coloredvertexshader.vsh  component.c  component.h  connection.h  creature.c  creature.h  creaturecontext.c  creaturecontext.h  evoshader.c  evoshader.h  food.c  food.h  fragmentshader1.fsh  gatherer.c  gatherer.h  gene.c  gene.h  genome.c  genome.h  globals.h  innovation.c  innovation.h  inspectorvertexshader.vsh  intsequence.h  linkedlist.c  linkedlist.h  linkednetwork.c  (+21 more)
CompiledRelease/: coloredvertexshader.vsh  inspectorfragmentshader.fsh
Creature/: collision.c  component.c  component.h  creature.c  creature.h  creaturecontext.c  creaturecontext.h
Environment/: abysscontext.c  abysscontext.h  food.c  food.h
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
GLSLShaders/: indivvertexshader.vsh  textfragmentshader.fsh  textvertexshader.vsh
Genome/: actualizer.h  connection.c  connection.h
Graphics/: camera.c  camera.h  evoshader.c  evoshader.h  render.h  shapes.c
Innovation/: innovation.c  innovation.h
Simulation/: inspector.c  inspector.h  intsequence.h  sequence.c  settings.h  simulation.c  simulation.h  text.c  text.h  utils.c  utils.h
